v0.9.3/_sources/index.rst.txt
.. Open Legal Data Platform documentation master file, created by
   sphinx-quickstart on Thu Apr  5 20:52:28 2018.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.

Welcome to Open Legal Data Platform's documentation!
====================================================

OLDP is a web application, written in Python 3.5 and based on the Django web framework,
It is used for processing legal text and providing a REST-API and Elasticsearch-based search engine.
OLDP is being develop by the non-profit initiative Open Legal Data with the goal
of building an Open Data platform for legal documents (mainly court decisions and laws).
The platform makes legal information freely accessible for the general public and especially third-party apps.


.. toctree::
   :maxdepth: 2
   :caption: Contents:

   getting-started
   testing
   api/api-overview
   api/api-swagger
   api/case-creation
   django
   development
   processing
   elasticsearch
   database
   production
   docker



Indices and tables
==================

* :ref:`genindex`
* :ref:`modindex`
* :ref:`search`
